change svg files

--- a/index.html
+++ b/index.html
@@ -135,55 +135,55 @@
   <div class="custom-container">
     <section>
       <div class="skill-grid">
-        <img class="icons" src="asset/icons8-html.svg" alt="">
+        <img class="icons" src="icons8-html.svg" alt="">
         <div class="text-box">
           <span class="tag">HTML</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/icons8-css.svg" alt="">
+        <img class="icons" src="icons8-css.svg" alt="">
         <div class="text-box">
           <span class="tag">CSS</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/icons8-c++.svg" alt="">
+        <img class="icons" src="icons8-c++.svg" alt="">
         <div class="text-box">
           <span class="tag">C++</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/icons8-javascript.svg" alt="">
+        <img class="icons" src="icons8-javascript.svg" alt="">
         <div class="text-box">
           <span class="tag">Javascript</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/icons8-react-native.svg" alt="">
+        <img class="icons" src="icons8-react-native.svg" alt="">
         <div class="text-box">
           <span class="tag">React</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/icons8-git.svg" alt="">
+        <img class="icons" src="icons8-git.svg" alt="">
         <div class="text-box">
           <span class="tag">Git</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/mongodb-icon.svg" alt="">
+        <img class="icons" src="mongodb-icon.svg" alt="">
         <div class="text-box">
           <span class="tag">MongoDB</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/github-white-icon.svg" alt="">
+        <img class="icons" src="github-white-icon.svg" alt="">
         <div class="text-box">
           <span class="tag">github</span>
         </div>
       </div>
       <div class="skill-grid">
-        <img class="icons" src="asset/node.svg" alt="">
+        <img class="icons" src="node.svg" alt="">
         <div class="text-box">
           <span class="tag">Node.js</span>
         </div>
