--- a/index.html
+++ b/index.html
@@ -85,50 +85,50 @@
         <div class="services-list">
           <div>
             <h3>HTML, CSS, and Javascript </h3>
-            <p style="color: greenyellow;" >✔ Johns Hopkins University</p>
-            <p style="color: greenyellow;" >✔ Issued March 2025</p>
+            <p style="color: greenyellow;">✔ Johns Hopkins University</p>
+            <p style="color: greenyellow;">✔ Issued March 2025</p>
             <a href="https://www.coursera.org/account/accomplishments/certificate/IGNRSIYZ0ZIV" class="read">View
               Certificate</a>
           </div>
           <div>
             <h3>Introduction To </h3>
             <h3> HTML5</h3>
-            <p style="color: greenyellow;" >✔ University of Michigan</p>
-            <p style="color: greenyellow;" >✔ Issued March 2025</p>
+            <p style="color: greenyellow;">✔ University of Michigan</p>
+            <p style="color: greenyellow;">✔ Issued March 2025</p>
             <a href="https://www.coursera.org/account/accomplishments/certificate/965JQEAVCDMQ" class="read">View
               Certificate</a>
           </div>
           <div>
             <h3>Introduction To Front-End Development</h3>
-            <p style="color: greenyellow;" >✔ Meta</p>
-            <p style="color: greenyellow;" >✔ Issued March 2025</p>
+            <p style="color: greenyellow;">✔ Meta</p>
+            <p style="color: greenyellow;">✔ Issued March 2025</p>
             <a href="https://www.coursera.org/account/accomplishments/certificate/HTYX4GWW35Z5" class="read">View
               Certificate</a>
           </div>
           <div>
             <h3>Data Analytics Job Simulation</h3>
-            <p style="color: greenyellow;" >✔ Deloitte Australia</p>
-            <p style="color: greenyellow;" >✔ Issued March 2025</p>
+            <p style="color: greenyellow;">✔ Deloitte Australia</p>
+            <p style="color: greenyellow;">✔ Issued March 2025</p>
             <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/9PBTqmSxAf6zZTseP/io9DzWKe3PTsiS6GG_9PBTqmSxAf6zZTseP_cNFxFrFaG2ihc5YMZ_1747542982535_completion_certificate.pdf"
               class="read">View Certificate</a>
           </div>
           <div>
             <h3>Cybersecurity Analyst Job Simulation</h3>
-            <p style="color: greenyellow;" >✔ Tata Group</p>
-            <p style="color: greenyellow;" >✔ Issued March 2025</p>
+            <p style="color: greenyellow;">✔ Tata Group</p>
+            <p style="color: greenyellow;">✔ Issued March 2025</p>
             <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/ifobHAoMjQs9s6bKS/gmf3ypEXBj2wvfQWC_ifobHAoMjQs9s6bKS_cNFxFrFaG2ihc5YMZ_1747544781320_completion_certificate.pdf"
               class="read">View Certificate</a>
           </div>
           <div>
             <h3>Bachelor of Computer Applications</h3>
-            <p style="color: greenyellow;" >✔ Chaudhary Devi Lal University, Sirsa</p>
-            <p style="color: greenyellow;" >✔ Issued March 2024</p>
+            <p style="color: greenyellow;">✔ Chaudhary Devi Lal University, Sirsa</p>
+            <p style="color: greenyellow;">✔ Issued March 2024</p>
             <a href="https://drive.google.com/file/d/1_E9dtodtKnoZqwpqJfxvCgPJ31QE6kxQ/view?usp=drives"
               class="read">View Certificate</a>
           </div>
         </div>
       </div>
-      </div>
+    </div>
   </section>
 
   <h1 class="sub-title1">My <span>Skills</span></h1>
@@ -190,54 +190,135 @@
       </div>
     </section>
   </div>
+  <!-- project -->
+  <div class="portfolio" id="project">
+    <div class="main-text" id="project">
+      <h2>Latest <span>Project</span></h2>
+      <div class="container-card">
+        <div class="project-card">
+          <img src="project1.PNG" alt="" class="project-image" />
+          <p class="project-title">Forever Shopping Website</p>
+          <ul class="project-features">
+            <li>
+              <span class="checkmark">✔</span>
+              Crafted a MERN eCommerce platform with Admin Panel and Payment Gateway integration.
+            </li>
+            <li>
+              <span class="checkmark">✔</span>
+              Developed a responsive and modern e-commerce front-end
+              interface using React.js and Tailwind CSS .
+            </li>
+          </ul>
+          <div class="project-tags">
+            <span># React.js</span>
+            <span># Node.js</span>
+            <span># Express.js</span>
+            <span># MongoDB</span>
+            <span># Responsive</span>
+          </div>
+          <div class="project-link">
+            <a href="https://shopping-frontend-orpin.vercel.app/" target="_blank">View Project</a>
+          </div>
+        </div>
 
+        <div class="project-card">
+          <img src="project2.PNG" alt="" class="project-image" />
+          <p class="project-title">Portfolio Website</p>
+          <ul class="project-features">
+            <li>
+              <span class="checkmark">✔</span>
+              Designed and developed a personal portfolio website using HTML,
+              CSS, JavaScript .
+            </li>
+            <li>
+              <span class="checkmark">✔</span>
+              Implemented features like dark mode toggle, contact form,
+              animations .
+            </li>
+          </ul>
+          <div class="project-tags">
+            <span># HTML</span>
+            <span># CSS</span>
+            <span># JavaScript</span>
+            <span># Responsive</span>
+            <span># Animations</span>
+          </div>
+          <div class="project-link">
+            <a href="https://ankitfolios.vercel.app/" target="_blank">View Project</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="project3.PNG" alt="" class="project-image" />
+          <p class="project-title">Music Player-Spotify</p>
+          <ul class="project-features">
+            <li>
+              <span class="checkmark">✔</span>
+              Built a responsive music player UI using HTML, CSS, and
+              JavaScript .
+            </li>
+            <li>
+              <span class="checkmark">✔</span>
+              Implemented basic features like play/pause, progress bar,
+              and song list display.
+            </li>
+          </ul>
+          <div class="project-tags">
+            <span># HTML</span>
+            <span># CSS</span>
+            <span># JavaScript</span>
+            <span># Responsive</span>
+            <span># Drak Mode</span>
+          </div>
+          <div class="project-link">
+            <a href="https://myspotify-theta.vercel.app/" target="_blank">View Project</a>
+          </div>
+        </div>
 
-
-
-  <section>
-    <div class="portfolio" id="project">
-      <div class="main-text" id="project">
-        <h2>Latest <span>Project</span></h2>
-
-        <div class="portfolio-content">
-          <div class="row">
-            <img src="netflix.png" alt="">
-            <div class="layer">
-              <h5>Netflix-Clone</h5>
-              <p>Netflix is a streaming service that offers movies, TV shows, documentaries, and more. It's available on
-                many internet-connected devices, including TVs, phones, and tablets.</p>
-              <a href="https://fancy-alpaca-8c410f.netlify.app/"><i class='bx bx-link-external'></i></a>
-            </div>
+        <div class="project-card">
+          <img src="project4.png" alt="" class="project-image" />
+          <p class="project-title">Netflix-clone</p>
+          <ul class="project-features">
+            <li>
+              <span class="checkmark">✔</span>
+              Designed and developed a personal portfolio website using HTML,
+              CSS, JavaScript .
+            </li>
+            <li>
+              <span class="checkmark">✔</span>
+              Implemented features like dark mode toggle video,
+              animations adding.
+            </li>
+          </ul>
+          <div class="project-tags">
+             <span># HTML</span>
+            <span># CSS</span>
+            <span># JavaScript</span>
+            <span># clone</span>
+            <span># Drak Mode</span>
+          </div>
+          <div class="project-link">
+            <a href="https://fancy-alpaca-8c410f.netlify.app/" target="_blank">View Project</a>
           </div>
 
-          <div class="row">
-            <img src="game.png" alt="">
-            <div class="layer">
-              <h5>Rock paper scissors</h5>
-              <p>Rock, paper, scissors is a hand game where players simultaneously make a rock, paper, or scissors shape
-                with their hands</p>
-              <a href="https://roaring-jalebi-0e9850.netlify.app/"><i class='bx bx-link-external'></i></a>
-            </div>
-          </div>
-          <div class="row">
-            <img src="amzon (1).png" alt="">
-            <div class="layer">
-              <h5>Amazon</h5>
-              <p>Amazon is a popular online shopping website where you can buy a wide range of new and second-hand
-                items, from books and music to computers and cars.</p>
-              <a href="https://fantastic-starship-532282.netlify.app/"><i class='bx bx-link-external'></i></a>
-            </div>
-          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+
+
 
   <section class="contact" id="contact">
     <div class="contact-text">
       <h3>Contact <span>Me</span></h3>
       <h4>Let's work Together</h4>
-      <p>Do you have a job opportunity or idea you'd like to discuss? Feel free to reach me at <span class="gradient-text"><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKhbsKGzpMKpbzNXZnWPvmscDfwfqnvdPcxzzVVtjSKWJgbdnvMbWddtVZCKZQjmwLJxmXz" >singlaankit789@gmail.com</a></span>. You can also find me on <span class="gradient-text"><a href="www.linkedin.com/in/ankit-singla-590bb5284">Linkedin</a></span>,<span class="gradient-text"><a href="https://github.com/Ankitsinglaa"> Github</a></span> and <span class="gradient-text"><a href="https://www.instagram.com/ankitsingla.25/?utm_source=ig_web_button_share_sheet">Instagram</a></span>.</p>
+      <p>Do you have a job opportunity or idea you'd like to discuss? Feel free to reach me at <span
+          class="gradient-text"><a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKhbsKGzpMKpbzNXZnWPvmscDfwfqnvdPcxzzVVtjSKWJgbdnvMbWddtVZCKZQjmwLJxmXz">singlaankit789@gmail.com</a></span>.
+        You can also find me on <span class="gradient-text"><a
+            href="www.linkedin.com/in/ankit-singla-590bb5284">Linkedin</a></span>,<span class="gradient-text"><a
+            href="https://github.com/Ankitsinglaa"> Github</a></span> and <span class="gradient-text"><a
+            href="https://www.instagram.com/ankitsingla.25/?utm_source=ig_web_button_share_sheet">Instagram</a></span>.
+      </p>
       <hr>
       <div class="contact-icons">
         <a href="https://www.facebook.com/share/1AmcQdEPXe"><i class='bx bxl-facebook-circle'></i></a>
