--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
       <a href="#contact" style="--i:5">Contact</a>
     </nav>
   </header>
-  <div class="ankitimg">
-    <img src="my1.png" alt="">
-  </div>
   <section class="home">
 
     <div class="home-content">
@@ -46,6 +43,8 @@
         <a href="https://github.com/Ankitsinglaa" style="--i:10"><i class="bx bxl-github"></i></a>
       </div>
       <a href="#about" class="btn-box">More About Me</a>
+            <a href="https://drive.google.com/file/d/1dmdcy0MTQAla-MGUusd9hhXtSsPogIO4/view" class="resumebtn-box">View Resume</a>
+
     </div>
     </div>
     </div>
@@ -81,9 +80,9 @@
   <section>
     <div class="services" id="services">
       <div class="container">
-        <h1 class="sub-title">My<span> Certifications</span></h1>
+        <h2 class="sub-title">My<span> Certifications</span></h2>
         <div class="services-list">
-          <div>
+          <div >
             <h3>HTML, CSS, and Javascript </h3>
             <p style="color: greenyellow;">✔ Johns Hopkins University</p>
             <p style="color: greenyellow;">✔ Issued March 2025</p>
@@ -330,7 +329,7 @@
     </div>
   </section>
   <div class="last-text">
-    <p>Ankit Singla 😎 Built with HTML,CSS — @ankitfolio</p>
+    <p>Ankit Singla 😎  — @ankitfolio</p>
   </div>
   <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
 
